ユーザ画像アップロードの実装

--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -12,6 +12,7 @@ ja:
               blank: "が入力されていません"
     attributes:
       user:
+        image: "ユーザイメージ"
         nickname: "ニックネーム"
         current_password: "現在のパスワード"
         email: "メールアドレス"
