コメント投稿・削除機能の実装

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -18,6 +18,10 @@ ja:
               blank: "を入力してください"
             user_id:
               blank: 'ユーザIDを取得できませんでした'
+        comment:
+          attributes:
+            comment_content:
+              blank: "を入力してください"
     attributes:
       user:
         image: "ユーザイメージ"
